fix margin for call to arms on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -247,7 +247,7 @@ a {
     }
 
     .cta {
-        margin-left: 10px;
+        margin: 0 10px;
         font-size: 0.9em;
         text-align: center;
     }
